Исправление по задаче Lambda